kubernetes/main/apps/media/jellyfin/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jellyfin
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-external-networking
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: seerr
      toPorts:
        - ports:
            - port: "8096"
              protocol: TCP
    # same-node ClusterIP replies miss CT reverse-xlate (socketLB
    # hostNamespaceOnly + endpointRoutes) and hit ingress policy
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/instance: traefik-networking
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/instance: traefik-networking
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
    # metadata providers
    - toEntities: ["world"]
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
